[project]
name = "poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.8",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "safetensors>=0.8.0",
    "streamlit>=1.59.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.13.0",
]
